# bluedot

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/bluedot/: CMakeLists.txt  bluedot.cpp
src/generator/: CMakeLists.txt  alphablendop.h  alphablendop.hpp  alphatocolorop.h  alphatocolorop.hpp  colortoalphaop.h  colortoalphaop.hpp  fbm.h  fbm.hpp  fbmop.h  fbmop.hpp  fillop.h  fillop.hpp  generator.cpp  generator.h  generator.hpp  gradientop.h  gradientop.hpp  greaterthanop.h  greaterthanop.hpp  layer.h  layer.hpp  lessthanop.h  lessthanop.hpp  maddop.h  maddop.hpp  multiplyop.h  multiplyop.hpp  noiseop.h  noiseop.hpp  normalizeop.h  normalizeop.hpp  op.h  swapop.h  swapop.hpp
